--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <meta name="format-detection" content="telephone=no" />
     
     <!-- Favicon -->
-    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+    <link rel="icon" type="image/png" href="/favicon.ico" />
     
     <!-- Preconnect for performance -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
